fix: spacing

--- a/pranavres/src/App.css
+++ b/pranavres/src/App.css
@@ -1432,3 +1432,20 @@ html body .sidebar::-webkit-scrollbar {
   opacity: 0.9;
 }
 
+@media (max-width: 390px) {
+  .sidebar-links ul {
+    margin: 0;
+    padding: 0;
+  }
+
+  .sidebar-links ul li {
+    margin: 4px 0;
+    padding: 0;
+  }
+
+  .sidebar-links ul li a {
+    padding: 2px 1px;
+    font-size: 0.9em;
+  }
+}
+
